tests/NormalTests/paczka1/small_fuzzy/66079960.err
Error in line 1: YlqnL A784 88,7
Error in line 3: mtOgpfMA3bC S3 25,5
Error in line 2: YlqnL S3 95,4
Error in line 4: mtOgpfMA3bC A928 56,8
Error in line 10: mtOgpfMA3bC S3 99,7
